tests/testcases/errors/cannot-convert-enum-to-single.boo
"""
cannot-convert-enum-to-single.boo(7,17): BCE0022: Cannot convert 'E' to 'single'.
"""
enum E:
  E0

s as single = E.E0
